--- a/firebase.json
+++ b/firebase.json
@@ -5,9 +5,7 @@
   },
   "hosting": {
     "public": "build",
-    "headers": [
-      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
-    ],
+    "site": "fitin",
     "ignore": [
       "firebase.json",
       "**/.*",
