--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-social-login-buttons": "^3.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
