--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
+    "firebase": "^9.11.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "react-social-login-buttons": "^3.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
