--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"@testing-library/react": "13.4.0",
 		"@testing-library/user-event": "13.5.0",
 		"bootstrap": "5.2.1",
+		"bootstrap-icons": "^1.9.1",
 		"firebase": "9.10.0",
 		"react": "18.2.0",
 		"react-bootstrap": "2.5.0",
+		"react-calendar": "^3.9.0",
 		"react-dom": "18.2.0",
 		"react-google-button": "0.7.2",
 		"react-router-dom": "6.4.2",
