--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-calendar": "^3.9.0",
 		"react-dom": "18.2.0",
 		"react-google-button": "0.7.2",
+		"react-icons": "^4.6.0",
 		"react-router-dom": "6.4.2",
 		"react-scripts": "5.0.1",
 		"web-vitals": "2.1.4"
