--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 		"@testing-library/user-event": "13.5.0",
 		"bootstrap": "5.2.1",
 		"bootstrap-icons": "^1.9.1",
+		"date-fns": "^2.29.3",
 		"firebase": "9.10.0",
 		"react": "18.2.0",
 		"react-bootstrap": "2.5.0",
-		"react-calendar": "^3.9.0",
+		"react-day-picker": "^8.3.5",
 		"react-dom": "18.2.0",
 		"react-google-button": "0.7.2",
 		"react-icons": "^4.6.0",
