SPM-62 / SPM-83: Workouts Page and React Components (#10)
Co-authored-by: Seyon Rajagopal <r_seyon@live.ca>
Co-authored-by: Jacky Ly <jacky.ly@ryerson.ca>
Co-authored-by: Jawwad Khan <jawwad1809@gmail.com>

--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
 		"@testing-library/react": "13.4.0",
 		"@testing-library/user-event": "13.5.0",
 		"bootstrap": "5.2.1",
+		"bootstrap-icons": "^1.9.1",
+		"date-fns": "^2.29.3",
 		"firebase": "9.10.0",
 		"react": "18.2.0",
 		"react-bootstrap": "2.5.0",
+		"react-day-picker": "^8.3.5",
 		"react-dom": "18.2.0",
 		"react-google-button": "0.7.2",
+		"react-icons": "^4.6.0",
 		"react-router-dom": "6.4.2",
 		"react-scripts": "5.0.1",
 		"web-vitals": "2.1.4"
