--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"@testing-library/user-event": "13.5.0",
 		"bootstrap": "5.2.1",
 		"bootstrap-icons": "^1.9.1",
+		"browser-image-compression": "^2.0.0",
 		"date-fns": "^2.29.3",
 		"firebase": "9.10.0",
 		"moment": "^2.29.4",
+		"rc-progress": "^3.4.1",
 		"react": "18.2.0",
 		"react-bootstrap": "2.5.0",
 		"react-day-picker": "^8.3.5",
