--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"date-fns": "^2.29.3",
 		"firebase": "9.10.0",
 		"moment": "^2.29.4",
+		"moment-timezone": "^0.5.38",
 		"rc-progress": "^3.4.1",
 		"react": "18.2.0",
 		"react-bootstrap": "2.5.0",
@@ -19,6 +20,7 @@
 		"react-dom": "18.2.0",
 		"react-google-button": "0.7.2",
 		"react-icons": "^4.6.0",
+		"react-moment": "^1.1.2",
 		"react-router-dom": "6.4.2",
 		"react-scripts": "5.0.1",
 		"react-tag-input-component": "^2.0.2",
