--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-dom": "18.2.0",
 		"react-google-button": "0.7.2",
 		"react-icons": "^4.6.0",
+		"react-infinite-scroller": "^1.2.6",
 		"react-moment": "^1.1.2",
 		"react-router-dom": "6.4.2",
 		"react-scripts": "5.0.1",
